# OpenCV4Demo

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/uiuang/opencv4demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: image-lib.cpp  native-lib.cpp
app/src/main/java/com/uiuang/opencv4demo/: ImageProcessing.java  MainActivity.java  OpencvJni.java
app/src/main/java/com/uiuang/opencv4demo/jni/: BitmapOperation.java  OpenCVImageUtil.java
app/src/main/java/com/uiuang/opencv4demo/ui/: BitmapOperationActivity.java  OpenImageActivity.java
app/src/main/java/com/uiuang/opencv4demo/util/: CameraHelper.java  FileUtil.java  GlideEngine.java  Utils.java
app/src/main/res/layout/: activity_bitmap_operation.xml  activity_main.xml  activity_open_image.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/uiuang/opencv4demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
